fix footer spacing

--- a/landing/components/Roadmap/Roadmap.module.scss
+++ b/landing/components/Roadmap/Roadmap.module.scss
@@ -1,7 +1,7 @@
 .container {
   height: 120vh;
   margin-top: 10rem;
-  margin-bottom: 20rem;
+  margin-bottom: 15rem;
 
   h1 {
     font-size: 50px;
@@ -30,7 +30,7 @@
 @media (max-width: 1366px) {
   .container {
     margin-top: 5rem;
-    margin-bottom: 15rem;
+    margin-bottom: 8rem !important;
 
     h1 {
       font-size: 40px;
@@ -54,9 +54,9 @@
 
 @media (max-width: 576px) {
   .container {
-    height: 140vh;
+    height: 120vh;
     margin-top: 1rem;
-    margin-bottom: 20rem;
+    margin-bottom: 9rem !important;
 
     h1 {
       font-size: 40px;
